--- a/City - Slider Starter Files/style.css
+++ b/City - Slider Starter Files/style.css
@@ -87,14 +87,14 @@ body {
   font-size: 1.2rem;
   text-transform: uppercase;
   margin: 1rem;
-  border-color: #1ebba3;
-  background-color: #1ebba3;
+  border-color: #41c70c;
+  background-color: #41c70c;
   color: white;
 }
 .btn-secondary:hover,
 .btn-secondary:focus {
-  border-color: #189582;
-  background-color: #189582;
+  border-color: #d8d80d;
+  background-color: #d8d80d;
   color: white;
 }
 /*    Portfolio  */
@@ -134,6 +134,52 @@ h3.heading {
 .card {
   margin: 2rem;
 }
+/* -------------Course ------------------ */
+.services {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1 {
+  font-size: 34px;
+  font-weight: 600;
+}
+p {
+  color: #777;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+.row {
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.services-col {
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px 12px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.services-col:hover {
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
+}
+@media (max-width: 700px) {
+  .row {
+    flex-direction: column;
+  }
+}
+/* ---------------------------------------- */
 /* ---------------------------------------- */
 .campus {
   width: 80%;
@@ -218,7 +264,7 @@ footer svg.svg-inline--fa {
   margin: 1.2rem 0.5rem 0 0;
 }
 footer svg.svg-inline--fa:hover {
-  color: #0000cd;
+  color: #d8d80d;
 }
 hr.socket {
   border-top: 0.2rem solid yellow;
